worked on changes

--- a/Locuscare.html
+++ b/Locuscare.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"style="overflow:hidden">
+<html lang="en"style="overflow-x:hidden">
 
 <head>
     <!-- Google Tag Manager -->
@@ -48,8 +48,7 @@
     <!-- 4.0.0 bootstrap -->
     <link rel="stylesheet" href="./plugin/4.0.0_bootstrap.min.css">
 
-    <!-- custom css and responsive css-->
-    <link rel='stylesheet' href='./styles/styles.css'>
+    
 
     <!-- font-awesome icons -->
     <link rel="stylesheet" href="plugin/css/font-awesome.css">
@@ -61,7 +60,7 @@
     <link href="./plugin/aos.css" rel="stylesheet">
 
     <!-- css  -->
-   
+    <link rel="stylesheet" href="/styles/comman.css">
     <link rel="stylesheet" href="styles/Locuscare/Locuscare.css">
 
 
@@ -483,7 +482,7 @@
                             <div class="col-1"style="">
                             <span><li style="color:#2BD2EB;font-size:26px;margin-top:-7px" ></li></span>
                             </div>
-                            <div class="col-11"style="color:#FFFFFFB3;font-size:20px">
+                            <div class="col-11"style="color:#FFFFFFB3;font-size:18px">
                             The MVP was launched after vigorous testing.
                             </div>
                         </div>
@@ -493,7 +492,7 @@
                             <div class="col-1">
                                 <span><li style="color:#2BD2EB;font-size:26px;margin-top:-7px" ></li></span>
                             </div>
-                            <div class="col-11"style="color:#FFFFFFB3;font-size:20px">
+                            <div class="col-11"style="color:#FFFFFFB3;font-size:18px">
                                 User behavior was closely analyzed to make product iterations.
                             </div>
                         </div>
@@ -502,7 +501,7 @@
                             <div class="col-1">
                                 <span><li style="color:#2BD2EB;font-size:26px;margin-top:-7px" ></li></span>
                             </div>
-                            <div class="col-11"style="color:#FFFFFFB3;font-size:20px">
+                            <div class="col-11"style="color:#FFFFFFB3;font-size:18px">
                                 Once the product-market fit was achieved, the MVP progressed to the next developmental stage.
                             </div>
                         </div>
@@ -538,7 +537,7 @@
                             <div class="col-1"style="">
                             <span> <li style="color:#2BD2EB;font-size:20px;margin-top:-4px" ></li></span>
                             </div>
-                            <div class="col-11"style="color:#FFFFFFB3;font-size:16px;padding-left:0px">
+                            <div class="col-11"style="color:#FFFFFFB3;font-size:18px;padding-left:0px">
                             The MVP was launched after vigorous testing.
                             </div>
                         </div>
@@ -548,7 +547,7 @@
                             <div class="col-1">
                                 <span><li style="color:#2BD2EB;font-size:20px;margin-top:-4px" ></li></span>
                             </div>
-                            <div class="col-11"style="color:#FFFFFFB3;font-size:16px;padding-left:0px">
+                            <div class="col-11"style="color:#FFFFFFB3;font-size:18px;padding-left:0px">
                                 User behavior was closely analyzed to make product iterations.
                             </div>
                         </div>
@@ -557,7 +556,7 @@
                             <div class="col-1">
                                 <span><li style="color:#2BD2EB;font-size:20px;margin-top:-4px" ></li></span>
                             </div>
-                            <div class="col-11"style="color:#FFFFFFB3;font-size:16px;padding-left:0px">
+                            <div class="col-11"style="color:#FFFFFFB3;font-size:18px;padding-left:0px">
                                 Once the product-market fit was achieved, the MVP progressed to the next developmental stage.
                             </div>
                         </div>
@@ -732,7 +731,7 @@
 
         <div class="container" style="margin-top: 130px;">
             <div class="row">
-                <div class="col-12" style="text-align: center;margin-top: 50px;">
+                <div class="col-12 family" style="text-align: center;margin-top:200px;">
                     <a class="family_title">Family group</a>
                 </div>
                 <div class="col-12" style="text-align: center;">
@@ -996,27 +995,14 @@
     “https://www.linkedin.com/company/crayond/“, 
     “https://crayond.com” ] }
     </script>
-<!-- <script>
-      var arr = [
-{name:"hi",sub_name:"hello",color:"red"},
-{name:"2",sub_name:"hello",color:"blue"},
-{name:"3",sub_name:"hello",color:"green"}
-];
-document.getElementById("content_card").innerHTML = arr.map(val=>{
-return `
-<div class="grid-item" > 
-<div  style="background:${val.color};"> ${val.name}</div>
-<div style="background:red;"> ${val.sub_name}</div>
-</div>`
-});
-        </script> -->
+
 <script src="./plugin/jquery.min.js"></script>
 <script src="./plugin/bootstrap.min.js"></script>
 <script src="./plugin/aos.js"></script>
 <!-- // Freshchat -->
 <script src="./plugin/freshchat/footer.js"></script>
 <!-- // Freshchat -->
-<script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.js"></script>
+
 <script type="text/javascript">
     AOS.init();
     // Hide Header on on scroll down
