--- a/managedcare.html
+++ b/managedcare.html
@@ -219,7 +219,7 @@
                         <p class="Title_details_1 ">Healthcare platforms and services until now have been quite
                             fragmented. Every other solution to this challenge has either caused more fragmentation or
                             brought about unnecessary complications. This also resulted in huge add-ups of time on the
-                            patient’s end, who end up getting their urgent care delayed by huge margins</p>
+                            patient’s end, who end up getting their urgent care delayed by huge margins.</p>
                     </div>
                     <div class="col-12 col-md-12 col-lg-6 col-xl-6">
                         <p class="Title_details_1 ">Our objective was to build a platform economy that solves the above
@@ -427,14 +427,14 @@
                     <h1 class="launch_title">Launch</h1>
                 </div>
                 <div class="col-12 paragraph_launch">
-                    <h6 class="launch_description">Currently, the platform is in its first version</h6>
+                    <h6 class="launch_description">Currently, the platform is in its first version.</h6>
                 </div>
                 <div class="col-12 paragraph_launch_1">
                     <h6 class="launch_description_1">This puts it in a position to observe users and analyze their
-                        behaviors</h6>
+                        behaviors.</h6>
                 </div>
                 <div class="col-12 paragraph_launch_2">
-                    <h6 class="launch_description_2">The planning for the next release is underway</h6>
+                    <h6 class="launch_description_2">The planning for the next release is underway.</h6>
                 </div>
 
             </div>
@@ -465,7 +465,7 @@
                     <div class="col-12 col-md-12 col-lg-7 col-xl-7">
                         <p class="Title_details_1 ">Our top priorities were ⁠— digital transformation, system
                             intelligence,and adaptive UX. With our product evangelism techniques, we were able to solve
-                            problems using personas and drive high efficiency throughout</p>
+                            problems using personas and drive high efficiency throughout.</p>
                     </div>
                 </div>
             </div>
@@ -603,7 +603,7 @@
                     <div class="col-12 col-md-12 col-lg-7 col-xl-7">
                         <p class="Title_details_1 ">The platform allows service professionals to be available at all
                             times for their clients. Tasks can also be automated to ensure continuous, real- time
-                            support</p>
+                            support.</p>
                     </div>
                 </div>
 
@@ -744,7 +744,7 @@
                         <div class="row">
                             <div class="col-12 col-md-12 col-lg-12 col-xl-12">
                                 <p class="Title_details_1 ">Depending on their persona, every coordinator/supervision
-                                    gets visibility over different client details to allow for better care and service
+                                    gets visibility over different client details to allow for better care and service.
                                 </p>
                             </div>
                         </div>
@@ -791,7 +791,7 @@
                         <div class="row" style="margin-top:20px">
                             <div class="col-12 col-md-12 col-lg-12 col-xl-12">
                                 <p class="Title_details_1 ">Depending on their persona, every coordinator/supervision
-                                    gets visibility over different client details to allow for better care and service
+                                    gets visibility over different client details to allow for better care and service.
                                 </p>
                             </div>
                         </div>
@@ -827,7 +827,7 @@
             <div class="col-12 col-md-6 col-lg-6 col-xl-6">
                 <p class="Title_details_1 ">The platform allows service professionals to be available at all
                     times for their clients. Tasks can also be automated to ensure continuous, real- time
-                    support</p>
+                    support.</p>
             </div>
         </div>
         <div class="main_admin">
@@ -859,7 +859,7 @@
             <div class="col-12 col-md-12 col-lg-6 col-xl-6">
                 <p class="Title_details_1 ">The platform allows service professionals to be available at all
                     times for their clients. Tasks can also be automated to ensure continuous, real- time
-                    support</p>
+                    support.</p>
             </div>
         </div>
         <div class="main_admin">
@@ -1005,7 +1005,7 @@
             <div class="col-12 col-md-12 col-lg-12 col-xl-12">
                 <p class="Title_details_1 ">The platform allows service professionals to be available at all
                     times for their clients. Tasks can also be automated to ensure continuous, real- time
-                    support</p>
+                    support.</p>
             </div>
         </div>
         <div class="main_admin">
