--- a/csk.html
+++ b/csk.html
@@ -94,10 +94,7 @@
                     <div class="col-12 col-xs-12 col-ms-12 col-md-7 col-lg-7 col-xl-6 header_menu">
                         <span><a class="fontLatoRegular" href="/who-we-are">Who We Are</a></span>
                         <span><a class="fontLatoRegular" href="/ourapproach">Our Approach</a> </span>
-                        <span style="position: relative;padding: 10px 15px 10px 0px;"><a class="fontLatoRegular"
-                                href="/products">Products</a>
-                            <tag>NEW</tag>
-                        </span>
+                        <span style="position: relative;padding: 10px 15px 10px 0px;"><a class="fontLatoRegular" href="/opportunities">Opportunities</a><tag>We're Hiring</tag></span>
                         <span class="span-position"><a class="fontLatoRegular resources" target="_blank">Resources</a>
                             <div class="dropdown">
 
