--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
     <link href="./plugin/aos.css" rel="stylesheet">
 
     <!-- css  -->
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="./styles/styles.css">
+
+   
 
     <!-- HTML5 Shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -94,7 +96,7 @@
                     <div class="col-12 col-xs-12 col-ms-12 col-md-7 col-lg-7 col-xl-6 header_menu">
                         <span ><a class="fontLatoRegular" href="./who-we-are">Who We Are</a></span>
                         <span ><a class="fontLatoRegular" href="./ourapproach">Our Approach</a> </span>
-                        <span style="position: relative;padding: 10px 15px 10px 0px;"><a class="fontLatoRegular" href="/products">Products</a><tag>NEW</tag></span>
+                        <span style="position: relative;padding: 10px 15px 10px 0px;"><a class="fontLatoRegular" href="/opportunities">opportunities</a><tag>we're Hiring</tag></span>
                         <span class="span-position"><a class="fontLatoRegular resources"  target="_blank">Resources</a>
                             <div class="dropdown">
                                 
@@ -698,9 +700,9 @@
                         </ul> -->
                     </div>
                     <div class="col-6 col-sm-12 col-xs-6 col-md-2 col-lg-2 col-xl-2 menu_list" style="margin: auto;">
-                        <a href="/opportunities"  alt="Opportunities" style="color: unset;">
+                        <a href="/products"  alt="products" style="color: unset;">
                          <span class="fontLatoBold  footer_menu">
-                                Opportunities
+                                Products
                          </span>
                         </a>
                         <!-- <ul>
