worked on changes

--- a/Locuscare.html
+++ b/Locuscare.html
@@ -46,9 +46,11 @@
     <link rel="shortcut icon" href="./images/favicon_crayond.png">
 
     <!-- 4.0.0 bootstrap -->
-    <link rel="stylesheet" href="./plugin/4.0.0_bootstrap.min.css">
+    <link rel="stylesheet" href="/plugin/4.0.0_bootstrap.min.css">
+    <link rel="stylesheet" href="/plugin/bootstrap.min.js">
 
-    
+    <link rel="stylesheet" href="/plugin/jquery.min.js">
+    <link rel="stylesheet" href="/plugin/scrollmagic/scrollmagic.js">
 
     <!-- font-awesome icons -->
     <link rel="stylesheet" href="plugin/css/font-awesome.css">
