--- a/case-studies.html
+++ b/case-studies.html
@@ -554,6 +554,7 @@ return `
 <script src="./plugin/bootstrap.min.js"></script>
 <script src="./plugin/aos.js"></script>
 <script src="./plugin/loader.js"></script>
+<script src="./plugin/scrollmagic/scrollmagic.js"></script>
 <!-- // Freshchat -->
 <script src="./plugin/freshchat/footer.js"></script>
 <!-- // Freshchat -->
