worked on changes

--- a/contact.html
+++ b/contact.html
@@ -128,7 +128,7 @@
                 </li>
                 <li class="menu-item"><a href="./opportunities">Opportunities</a>
                 </li>
-                <li class="menu-item" style="position: relative;"><a href="./products">Products</a><tag>NEW</tag>
+                <li class="menu-item" style="position: relative;"><a href="./products">Products</a><tag>We're Hiring</tag>
                 </li>
                 <li class="menu-item" id="nav-toggle"><a target="_blank">Resources<i class="fa fa-caret-down" style="margin-left:10px;" aria-hidden="true"></i></a>
                 </li>
@@ -209,9 +209,9 @@
                         </ul> -->
                     </div>
                     <div class="col-6 col-sm-12 col-xs-6 col-md-2 col-lg-2 col-xl-2 menu_list" style="margin: auto;">
-                        <a href="./opportunities"  alt="Opportunities" style="color: unset;">
+                        <a href="./products"  alt="Products" style="color: unset;">
                          <span class="fontLatoBold  footer_menu">
-                                Opportunities
+                                Products
                          </span>
                         </a>
                         <!-- <ul>
