--- a/Locuscare.html
+++ b/Locuscare.html
@@ -65,20 +65,15 @@
     <link rel="stylesheet" href="/styles/comman.css">
     <link rel="stylesheet" href="styles/Locuscare/Locuscare.css">
 
-
    
-    <script
-    src="https://code.jquery.com/jquery-3.2.1.min.js"
-    integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-    crossorigin="anonymous"></script>
    
 
     <!-- HTML5 Shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-    <script src="js/vendor/html5shim.js"></script>
+ 
+     <script src="js/vendor/html5shim.js"></script>
     <script src="js/vendor/respond.min.js"></script>
-    <![endif]-->
+    
 
     <!-- Freshchat -->
     <script src="https://wchat.freshchat.com/js/widget.js"></script>
@@ -108,7 +103,7 @@
                         <span><a class="fontLatoRegular" href="./who-we-are">Who We Are</a></span>
                         <span><a class="fontLatoRegular" href="./ourapproach">Our Approach</a> </span>
                         <span style="position: relative;padding: 10px 15px 10px 0px;"><a class="fontLatoRegular"
-                                href="./products">Products</a>
+                                href="./opportunities">Opportunities</a>
                             <tag>NEW</tag>
                         </span>
                         <span class="span-position"><a class="fontLatoRegular resources" target="_blank">Resources</a>
@@ -148,10 +143,10 @@
                 </li>
                 <li class="menu-item"><a href="./ourapproach">Our Approach</a>
                 </li>
-                <li class="menu-item"><a href="./opportunities">Opportunities</a>
+                <li class="menu-item"><a href="./opportunities">Opportunities</a> <tag>We're Hiring</tag>
                 </li>
                 <li class="menu-item" style="position: relative;"><a href="./products">Products</a>
-                    <tag>NEW</tag>
+                   
                 </li>
                 <li class="menu-item" id="nav-toggle"><a target="_blank">Resources<i class="fa fa-caret-down"
                             style="margin-left:10px;" aria-hidden="true"></i></a>
@@ -173,7 +168,7 @@
                     <a>
                         <img src="./images/close.svg" alt="menuclose" style="padding-bottom: 4px;" />
                     </a>
-                </li>
+                </li> 
             </ul>
         </div>
     </div>
@@ -826,9 +821,9 @@
                     </ul> -->
                     </div>
                     <div class="col-6 col-sm-12 col-xs-6 col-md-2 col-lg-2 col-xl-2 menu_list" style="margin: auto;">
-                        <a href="/opportunities" alt="Opportunities" style="color: unset;">
+                        <a href="/products" alt="products" style="color: unset;">
                             <span class="fontLatoBold  footer_menu">
-                                Opportunities
+                                Products
                             </span>
                         </a>
                         <!-- <ul>
