--- a/csk.html
+++ b/csk.html
@@ -97,7 +97,6 @@
                         <span style="position: relative;padding: 10px 15px 10px 0px;"><a class="fontLatoRegular" href="/opportunities">Opportunities</a><tag>We're Hiring</tag></span>
                         <span class="span-position"><a class="fontLatoRegular resources" target="_blank">Resources</a>
                             <div class="dropdown">
-
                                 <a id="blog" href="https://www.crayond.com/blog"> Blog</a>
                                 <a id="glossary" href="./glossary"> Glossary</a>
                                 <a id="saasmetrics" href="/saas-metrics/index" >Saas Metrics</a>
@@ -132,10 +131,10 @@
                 </li>
                 <li class="menu-item"><a href="./ourapproach">Our Approach</a>
                 </li>
-                <li class="menu-item"><a href="./opportunities">Opportunities</a>
+                <li class="menu-item"><a href="./opportunities">Opportunities</a> <tag>We're Hiring</tag>
                 </li>
                 <li class="menu-item" style="position: relative;"><a href="./products">Products</a>
-                    <tag>NEW</tag>
+                   
                 </li>
                 <li class="menu-item" id="nav-toggle"><a target="_blank">Resources<i class="fa fa-caret-down"
                             style="margin-left:10px;" aria-hidden="true"></i></a>
@@ -963,9 +962,9 @@
                     </ul> -->
                     </div>
                     <div class="col-6 col-sm-12 col-xs-6 col-md-2 col-lg-2 col-xl-2 menu_list" style="margin: auto;">
-                        <a href="/opportunities" alt="Opportunities" style="color: unset;">
+                        <a href="/products" alt="Products" style="color: unset;">
                             <span class="fontLatoBold  footer_menu">
-                                Opportunities
+                                Products
                             </span>
                         </a>
                         <!-- <ul>
