--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         </div>
     </div>
  
-    <div class="header_mobile" style="display: none;">
+    <div class="header_mobile" style="display:none;">
         <div class="crayond_logo_mobile">
             <a href="/" class="logo" alt="crayond" style="margin: auto;"><img width="134px" alt="logo-crayond" src="./images/logo-crayond@2x.jpg"/>&nbsp;</a>
         </div>
@@ -132,9 +132,9 @@
             </li>
             <li class="menu-item"><a href="./ourapproach">Our Approach</a>
             </li>
-            <li class="menu-item"><a href="./opportunities">Opportunities</a>
+            <li class="menu-item"><a href="./opportunities">Opportunities</a><tag>We're Hiring</tag>
             </li>
-            <li class="menu-item" style="position: relative;"><a href="./products">Products</a><tag>NEW</tag>
+            <li class="menu-item" style="position: relative;"><a href="./products">Products</a>
             </li>
             <li class="menu-item" id="nav-toggle"><a target="_blank">Resources<i class="fa fa-caret-down" style="margin-left:10px;" aria-hidden="true"></i></a>
             </li>
@@ -916,5 +916,13 @@
 $("#nav-toggle").click(function(){
   $(".sub-menu").slideToggle();
 });
+$('.icon-container').click(function(){
+	$('.header_mobile').addClass('menu-open')
+});
+
+</script>
+
+<script>
+
 </script>
 </html>
