--- a/products.html
+++ b/products.html
@@ -118,7 +118,7 @@ input:focus:invalid {
                        <div class="col-12 col-xs-12 col-ms-12 col-md-7 col-lg-7 col-xl-6 header_menu">
                            <span ><a class="fontLatoRegular" href="./who-we-are">Who We Are</a></span>
                            <span ><a class="fontLatoRegular" href="./ourapproach">Our Approach</a> </span>
-                           <span style="position: relative;padding: 10px 15px 10px 0px;"><a class="fontLatoRegular" href="./products">Products</a><tag>NEW</tag></span>
+                           <span style="position: relative;padding: 10px 15px 10px 0px;"><a class="fontLatoRegular" href="./opportunities">Opportunities</a><tag>We're Hiring</tag></span>
                            <span class="span-position"><a class="fontLatoRegular resources"  target="_blank">Resources</a>
                                <div class="dropdown">
                                    
@@ -155,9 +155,9 @@ input:focus:invalid {
                </li>
                <li class="menu-item"><a href="./ourapproach">Our Approach</a>
                </li>
-               <li class="menu-item"><a href="./opportunities">Opportunities</a>
+               <li class="menu-item"><a href="./opportunities">Opportunities</a><tag>We're Hiring</tag>
                </li>
-               <li class="menu-item" style="position: relative;"><a href="./products">Products</a><tag>NEW</tag>
+               <li class="menu-item" style="position: relative;"><a href="./products">Products</a>
                </li>
                <li class="menu-item" id="nav-toggle"><a target="_blank">Resources<i class="fa fa-caret-down" style="margin-left:10px;" aria-hidden="true"></i></a>
                </li>
