--- a/saas-metrics/lead-velocity-rate.html
+++ b/saas-metrics/lead-velocity-rate.html
@@ -109,8 +109,8 @@
                         <span><a class="fontLatoRegular" href="/who-we-are">Who We Are</a></span>
                         <span><a class="fontLatoRegular" href="/ourapproach">Our Approach</a> </span>
                         <span style="position: relative;padding: 10px 15px 10px 0px;"><a class="fontLatoRegular"
-                                href="/products">Products</a>
-                            <tag>NEW</tag>
+                                href="/opportunities">Opportunities</a>
+                            <tag>We're Hiring</tag>
                         </span>
                         <span class="span-position"><a class="fontLatoRegular resources" target="_blank">Resources</a>
                             <div class="dropdown">
@@ -154,10 +154,10 @@
                 </li>
                 <li class="menu-item"><a href="./ourapproach">Our Approach</a>
                 </li>
-                <li class="menu-item"><a href="./opportunities">Opportunities</a>
+                <li class="menu-item"><a href="./opportunities">Opportunities</a> <tag>We're Hiring</tag>
                 </li>
                 <li class="menu-item" style="position: relative;"><a href="./products">Products</a>
-                    <tag>NEW</tag>
+                   
                 </li>
                 <li class="menu-item" id="nav-toggle"><a target="_blank">Resources<i class="fa fa-caret-down"
                             style="margin-left:10px;" aria-hidden="true"></i></a>
@@ -372,9 +372,9 @@
                         </ul> -->
                 </div>
                 <div class="col-6 col-sm-12 col-xs-6 col-md-2 col-lg-2 col-xl-2 menu_list" style="margin: auto;">
-                    <a href="/opportunities" alt="Opportunities" style="color: unset;">
+                    <a href="/products" alt="Products" style="color: unset;">
                         <span class="fontLatoBold  footer_menu">
-                            Opportunities
+                            Products
                         </span>
                     </a>
                     <!-- <ul>
