--- a/index.html
+++ b/index.html
@@ -673,7 +673,7 @@
                         <p class="fontGraphikRegular">© Crayond Digital Pvt. Ltd.</p>
                         <p class="fontGraphikRegular">All rights reserved</p>
                     </div>
-                    <div class="col-6 col-sm-12 col-xs-6 col-md-3 col-lg-3 col-xl-3 menu_list">
+                    <div class="col-12 col-sm-12 col-xs-12 col-md-3 col-lg-3 col-xl-3 menu_list">
                        
                             <span class="fontLatoBold footer_menu">
                                     Company
@@ -724,7 +724,7 @@
                             <li><span class="fontLatoRegular">Contact</span></li>
                         </ul> -->
                     </div>
-                    <div class="col-6 col-sm-12 col-xs-6 col-md-3 col-lg-3 col-xl-3 menu_list" >
+                    <div class="col-12 col-sm-12 col-xs-12 col-md-3 col-lg-3 col-xl-3 menu_list" >
                        
                             <span class="fontLatoBold footer_menu">
                                    Resources
@@ -792,7 +792,7 @@
                             <div class="col-12  menu_types">
                                 <a href=""  alt="Company" style="color: unset;">
                                     <span class="fontGraphikRegular footer_menu_1">
-                                        Cost &nbsp;To&nbsp; Build &nbsp;a SaaS Produt
+                                        Cost &nbsp;To&nbsp; Build &nbsp; a SaaS Product
                                     </span>
                                 </a>
                             </div>
@@ -1006,7 +1006,7 @@ $('.icon-container').click(function(){
 });
 $("#nav-close").click(function(){
   $('.header_mobile').removeClass('menu-open')
-})
+});
 
 </script>
 
