--- a/products.html
+++ b/products.html
@@ -471,5 +471,12 @@ input:focus:invalid {
     $("#nav-toggle").click(function(){
       $(".sub-menu").slideToggle();
     });
+    $('.icon-container').click(function(){
+	$('.header_mobile').addClass('menu-open')
+});
+$("#nav-close").click(function(){
+  $('.header_mobile').removeClass('menu-open')
+});
+
     </script>
 </html>
