worked on the changes

--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
                 <div class="row">
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 desktop_responce_img">
                         <div class="img_section" style="margin: auto;">
-                            <img src="./images/(D)-Our-Pricing.png" />
+                            <img alt="OurPricing" src="./images/(D)-Our-Pricing.png" />
                         </div>
                     </div>
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6">
@@ -575,9 +575,9 @@
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 images_ceo" style="padding: 0;display: flex;">
                         <div class="row" style="margin: 0px 0px 0px auto;">
                             <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12" style="padding: 0;">
-                                <img src="./images/path-6.svg" style="position: absolute;width: 175px;top: 0;" />
-                                <img src="./images/Testimonial image.jpg" data-aos="zoom-in" data-aos-duration="10000" data-aos-easing="linear" style="padding: 10px;"/>
-                                <img src="./images/path-6-copy.svg" style="position: absolute; width: 76px; bottom: 0; right: 0;"/>
+                                <img  alt="path6"src="./images/path-6.svg" style="position: absolute;width: 175px;top: 0;" />
+                                <img  alt="testimonial"src="./images/Testimonial image.jpg" data-aos="zoom-in" data-aos-duration="10000" data-aos-easing="linear" style="padding: 10px;"/>
+                                <img alt="copy_6" src="./images/path-6-copy.svg" style="position: absolute; width: 76px; bottom: 0; right: 0;"/>
                             </div>
                         </div>
                     </div>
