--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                         <span ><a class="fontLatoRegular" href="./who-we-are">Who We Are</a></span>
                         <span ><a class="fontLatoRegular" href="./ourapproach">Our Approach</a> </span>
                         <span style="position: relative;padding: 10px 15px 10px 0px;"><a class="fontLatoRegular" href="/opportunities">opportunities</a><tag>we're Hiring</tag></span>
-                        <span class="span-position"><a class="fontLatoRegular resources" href="" target="_blank">Resources</a>
+                        <span class="span-position"><a class="fontLatoRegular resources" href="/" target="_blank">Resources</a>
                             <div class="dropdown">
                                 
                                 <a id="blog" href="https://www.crayond.com/blog"> Blog</a>
@@ -136,7 +136,7 @@
             </li>
             <li class="menu-item" style="position: relative;"><a href="./products">Products</a>
             </li>
-            <li class="menu-item" id="nav-toggle"><a target="_blank" href="">Resources<i class="fa fa-caret-down" style="margin-left:10px;" aria-hidden="true"></i></a>
+            <li class="menu-item" id="nav-toggle"><a target="_blank" href="/">Resources<i class="fa fa-caret-down" style="margin-left:10px;" aria-hidden="true"></i></a>
             </li>
             <li  class="sub-menu"><a href="https://www.crayond.com/blog">Blog</a></li>
             <li  class="sub-menu"><a href="./glossary">Glossary</a></li>
