worked on changes

--- a/index.html
+++ b/index.html
@@ -776,35 +776,35 @@
                         
                         <div class="row">
                             <div class="col-12 menu_types">
-                                <a href=""  alt="Company" style="color: unset;">
+                                <a href="/"  alt="Company" style="color: unset;">
                                     <span class="fontGraphikRegular footer_menu_1">
                                         Design &nbsp;Sprint
                                     </span>
                                 </a>
                             </div>
                             <div class="col-12  menu_types">
-                                <a href=""  alt="Company" style="color: unset;">
+                                <a href="/"  alt="Company" style="color: unset;">
                                     <span class="fontGraphikRegular footer_menu_1">
                                         Aha &nbsp;Moment
                                     </span>
                                 </a>
                             </div>
                             <div class="col-12  menu_types">
-                                <a href=""  alt="Company" style="color: unset;">
+                                <a href="/"  alt="Company" style="color: unset;">
                                     <span class="fontGraphikRegular footer_menu_1">
                                         Cost &nbsp;To&nbsp; Build &nbsp; a SaaS Product
                                     </span>
                                 </a>
                             </div>
                             <div class="col-12  menu_types">
-                                <a href=""  alt="Company" style="color: unset;">
+                                <a href="/"  alt="Company" style="color: unset;">
                                     <span class="fontGraphikRegular footer_menu_1">
                                         Product&nbsp; Development
                                     </span>
                                 </a>
                             </div>
                             <div class="col-12  menu_types">
-                                <a href=""  alt="Company" style="color: unset;">
+                                <a href="/"  alt="Company" style="color: unset;">
                                     <span class="fontGraphikRegular footer_menu_1">
                                         SaaS &nbsp;Framework
                                     </span>
