worked on changes

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <title>Crayon'd | Breathe Life Into Your Product idea</title> 
     <meta name="description" content="We help startup founders and businesses across the globe to craft their ideas into world-class products.">
-    <link rel="canonical" href="https://www.crayond.com/"/>
+    <link rel="canonical" href="https://www.crayond.com"/>
 
     <!-- Og meta dates -->
     <meta property="og:type" content="website" /> 
