--- a/index.html
+++ b/index.html
@@ -776,37 +776,37 @@
                         
                         <div class="row">
                             <div class="col-12 menu_types">
-                                <a href="/"  alt="Company" style="color: unset;">
+                                <a href="https://www.crayond.com/blog/design-sprint/?utm_source=footer"  alt="Company" style="color: unset;">
                                     <span class="fontGraphikRegular footer_menu_1">
-                                        Design &nbsp;Sprint
+                                        Design Sprint
                                     </span>
                                 </a>
                             </div>
                             <div class="col-12  menu_types">
-                                <a href="/"  alt="Company" style="color: unset;">
+                                <a href="https://www.crayond.com/blog/the-aha-moment-guide/?utm_source=footer"  alt="Company" style="color: unset;">
                                     <span class="fontGraphikRegular footer_menu_1">
-                                        Aha &nbsp;Moment
+                                        Aha Moment
                                     </span>
                                 </a>
                             </div>
                             <div class="col-12  menu_types">
-                                <a href="/"  alt="Company" style="color: unset;">
+                                <a href="https://www.crayond.com/blog/what-is-the-cost-to-build-a-saas-product/?utm_source=footer"  alt="Company" style="color: unset;">
                                     <span class="fontGraphikRegular footer_menu_1">
-                                        Cost &nbsp;To&nbsp; Build &nbsp; a SaaS Product
+                                        Cost To Build a SaaS Product
                                     </span>
                                 </a>
                             </div>
                             <div class="col-12  menu_types">
-                                <a href="/"  alt="Company" style="color: unset;">
+                                <a href="https://www.crayond.com/blog/product-development/?utm_source=footer"  alt="Company" style="color: unset;">
                                     <span class="fontGraphikRegular footer_menu_1">
-                                        Product&nbsp; Development
+                                        Product Development
                                     </span>
                                 </a>
                             </div>
                             <div class="col-12  menu_types">
-                                <a href="/"  alt="Company" style="color: unset;">
+                                <a href="https://www.crayond.com/blog/top-8-saas-frameworks-to-power-your-next-product/?utm_source=footer"  alt="Company" style="color: unset;">
                                     <span class="fontGraphikRegular footer_menu_1">
-                                        SaaS &nbsp;Framework
+                                        SaaS Framework
                                     </span>
                                 </a>
                             </div>
