--- a/index.html
+++ b/index.html
@@ -683,14 +683,14 @@
                             <div class="col-12 menu_types">
                                 <a href="/who-we-are"  alt="Company" style="color: unset;">
                                     <span class="fontGraphikRegular footer_menu_1">
-                                            Who&nbsp;We&nbsp;Are
+                                            Who We Are
                                     </span>
                                 </a>
                             </div>
                             <div class="col-12  menu_types">
                                 <a href="/ourapproach"  alt="Company" style="color: unset;">
                                     <span class="fontGraphikRegular footer_menu_1">
-                                        Our &nbsp;Approach
+                                        Our Approach
                                     </span>
                                 </a>
                             </div>
@@ -771,7 +771,7 @@
                     <div class="col-12 col-sm-12 col-xs-12 col-md-3 col-lg-3 col-xl-3 menu_list">
                       
                          <span class="fontLatoBold  footer_menu">
-                                Ulitimate Guides
+                                Ultimate Guides
                          </span>
                         
                         <div class="row">
