worked on changes

--- a/saas-metrics/Net-promoter-score.html
+++ b/saas-metrics/Net-promoter-score.html
@@ -176,7 +176,7 @@
             </ul>
             <ul class="menu mobile_menu_close" style="padding: 0; width: 50px; border-radius: 50px; margin: auto;">
                 <li class="menu-item">
-                    <a>
+                    <a href="/">
                         <img src="./images/close.svg" alt="menuclose" style="padding-bottom: 4px;" />
                     </a>
                 </li>
