--- a/ebooks.html
+++ b/ebooks.html
@@ -152,7 +152,7 @@
             </ul>
             <ul class="menu mobile_menu_close" style="padding: 0; width: 50px; border-radius: 50px; margin: auto;">
                 <li class="menu-item">
-                    <a>
+                    <a href="/">
                         <img src="./images/close.svg" alt="menuclose" style="padding-bottom: 4px;" />
                     </a>
                 </li>
@@ -165,7 +165,7 @@
             <div class="col-lg-6 col-md-5">
                 <div class="ebook-content col-lg-12 col-md-12 p-md-0">
                     <!-- <h4 class="fontLatoRegular">SaaS Cheat Sheet</h4> -->
-                    <h1 class="fontGraphikBold">Design Sprint— The Ultimate Guide.</h1>
+                    <h1 class="fontGraphikBold">Design Sprint—The Ultimate Guide.</h1>
                     <h4 class="fontLatoRegular">From idea to prototype— validate your product-idea to start developing,
                         in just 5 days!
                     </h4>
