worked on changes

--- a/saas-metrics/index.html
+++ b/saas-metrics/index.html
@@ -52,7 +52,7 @@
     <link rel="stylesheet" href="/plugin/4.0.0_bootstrap.min.css">
 
     <!-- custom css and responsive css-->
-    <link rel='stylesheet' href="/styles/comman.css">
+    <link rel='stylesheet' href="/styles/styles.css">
     <link rel="stylesheet" href="/styles/Saas_metric/Saas_metric.css">
 
     <!-- font-awesome icons -->
