--- a/saas-metrics/average-resolution-time.html
+++ b/saas-metrics/average-resolution-time.html
@@ -345,7 +345,7 @@
             <div class="row">
                 <div class="col-12 col-xs-12 col-ms-12 col-md-3 col-lg-3 col-xl-3 logo_address">
                         <a href="/" alt="caryond" style="text-decoration: none;">
-                    <img alt="crayond@2x" src="./images/logo-crayond@2x.jpg" width="115px" />
+                    <img alt="crayond@2x" src="/images/logo-crayond@2x.jpg" width="115px" />
                     </a>
                     <p class="fontGraphikRegular">© Crayond Digital Pvt. Ltd.</p>
                     <p class="fontGraphikRegular">All rights reserved</p>
