--- a/case-studies.html
+++ b/case-studies.html
@@ -266,7 +266,7 @@
           </div>
           <div class="row link">
             <div class="col-12 view">
-               <a class="view_link" href="/csk">READ MORE<i class="fas fa-arrow-right arrow"></i></a>
+               <a class="view_link" href="/chennai-super-kings">READ MORE<i class="fas fa-arrow-right arrow"></i></a>
             </div>
         </div>
 
