--- a/chennai-super-kings.html
+++ b/chennai-super-kings.html
@@ -56,6 +56,7 @@
     <!-- <link rel="stylesheet" href="styles/styles.css">  -->
     <link rel="stylesheet" href="styles/csk/csk.css">   
     <link rel="stylesheet" href="styles/comman.css">
+    <link rel="stylesheet" href="styles/styles.css">        
     
 
 
