--- a/chennai-super-kings.html
+++ b/chennai-super-kings.html
@@ -16,9 +16,20 @@
     </script>
     <!-- End Google Tag Manager → -->
 
-    <title>Chennai Super Kings(CSK) | Case Studies | Crayon'd</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> 
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="author" content="Crayon'd">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+    <meta name="theme-color" content="#334ac0">
+
+    <title>Chennai Super Kings(CSK) | Case Studies | Crayon'd</title> 
     <meta name="description" content="Learn how Chennai-based franchise cricket team, Chennai Super Kings(CSK), rebranded their website and its front end functionalities to create a more immersive experience since becoming a Crayond Partner! ">
     <link rel="canonical" href="https://www.crayond.com/case-studies/chennai-super-kings"/>
+
+  
+   
+   
     <!-- Og meta dates -->
     <meta property="og:type" content="website" /> <meta property="og:site_name" content="CRAYOND" />
     <meta property="og:url" content="https://www.crayond.com/case-studies/chennai-super-kings">
