--- a/managedcare.html
+++ b/managedcare.html
@@ -57,6 +57,7 @@
     <!-- css  -->
     <link rel="stylesheet" href="/styles/comman.css">
     <link rel="stylesheet" href="/styles/managedcare/managedcare.css">
+    <link rel="stylesheet" href="/styles/styles.css">
 
 
 
