worked on changes

--- a/managedcare.html
+++ b/managedcare.html
@@ -140,7 +140,7 @@
                 <li class="menu-item" style="position: relative;"><a href="./products">Products</a>
                     
                 </li>
-                <li class="menu-item" id="nav-toggle"><a target="_blank">Resources<i class="fa fa-caret-down"
+                <li class="menu-item" id="nav-toggle"><a target="_blank" href="/">Resources<i class="fa fa-caret-down"
                             style="margin-left:10px;" aria-hidden="true"></i></a>
                 </li>
                 <li class="sub-menu"><a href="https://www.crayond.com/blog">Blog</a></li>
@@ -157,7 +157,7 @@
             </ul>
             <ul class="menu mobile_menu_close" style="padding: 0; width: 50px; border-radius: 50px; margin: auto;">
                 <li class="menu-item">
-                    <a>
+                    <a href="/">
                         <img src="./images/close.svg" alt="menuclose" style="padding-bottom: 4px;" />
                     </a>
                 </li>
