worked on changes

--- a/Locuscare.html
+++ b/Locuscare.html
@@ -64,6 +64,7 @@
     <!-- css  -->
     <link rel="stylesheet" href="/styles/comman.css">
     <link rel="stylesheet" href="styles/Locuscare/Locuscare.css">
+    <link rel="stylesheet" href="styles/styles.css">
 
    
    
