--- a/Locuscare.html
+++ b/Locuscare.html
@@ -146,7 +146,7 @@
                 <li class="menu-item" style="position: relative;"><a href="./products">Products</a>
                    
                 </li>
-                <li class="menu-item" id="nav-toggle"><a target="_blank">Resources<i class="fa fa-caret-down"
+                <li class="menu-item" id="nav-toggle"><a target="_blank" href="/">Resources <i class="fa fa-caret-down"
                             style="margin-left:10px;" aria-hidden="true"></i></a>
                 </li>
                 <li class="sub-menu"><a href="https://www.crayond.com/blog">Blog</a></li>
@@ -242,7 +242,7 @@
     <div class="container">
         <div class="  row about_head">
             <div class=" col-12">
-                <a class="title"> About Locuscare</a>
+                <p class="title"> About Locuscare</p>
             </div>
         </div>
         <div class="  row head_details">
@@ -269,7 +269,7 @@
             style="background: #2B2756;padding:50px 70px 50px 70px;border-radius:40px;width:100%;margin-left:0px;margin-top:4% !important">
             <div class="  row about_head1">
                 <div class=" col-12">
-                    <a class="title"> Challenge</a>
+                    <p class="title"> Challenge</p>
                 </div>
             </div>
             <div class="  row head_details1">
