--- a/Locuscare.html
+++ b/Locuscare.html
@@ -291,10 +291,10 @@
 
             <div class="row approach">
                 <div class=" col-12">
-                    <a class="title"> Our Approach</a>
+                    <p class="title"> Our Approach</p>
                 </div>
                 <div class=" col-12 details">
-                    <a class="content"> The MVP developmental stages</a>
+                    <p class="content"> The MVP developmental stages</p>
                 </div>
             </div>
             <div class="row "
@@ -475,7 +475,7 @@
                     style="margin-top:2%;padding: 5% 2% 5% 10%;">
                     <div class="  row about_head">
                         <div class=" col-12" style="padding-left:0px">
-                            <a class="title" style="color:#FFFFFF">Launch</a>
+                            <p class="title" style="color:#FFFFFF">Launch</p>
                         </div>
                     </div>
                     <div class="  row head_details"style="margin-top:30px">
@@ -530,7 +530,7 @@
                     style="margin-top:0%;padding: 10% 2% 5% 10%;top:-30%">
                     <div class="  row about_head">
                         <div class=" col-12"style="padding-left:0px">
-                            <a class="title" style="color:#FFFFFF">Launch</a>
+                            <p class="title" style="color:#FFFFFF">Launch</p>
                         </div>
                     </div>
                     <div class="  row head_details"style="margin-top:20px">
@@ -576,12 +576,12 @@
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
                     <div class="row">
                         <div class="col-12" style="text-align:left;">
-                            <a class="onboard_title">Quick Onboarding</a>
+                            <p class="onboard_title">Quick Onboarding</p>
                         </div>
 
 
                         <div class="col-12 " style="text-align:left;margin-top:2%">
-                            <a class="achieved_title">What we achieved</a>
+                            <p class="achieved_title">What we achieved</p>
                         </div>
                         <div class="col-12" style="text-align:left;">
                             <p class="achieved_content">Easy and fast onboarding experience for clinics, labs, doctors,
@@ -620,12 +620,12 @@
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
                     <div class="row">
                         <div class="col-12" style="text-align:left;">
-                            <a class="onboard_title">Quick Onboarding</a>
+                            <p class="onboard_title">Quick Onboarding</p>
                         </div>
 
 
                         <div class="col-12 " style="text-align:left;margin-top:2%">
-                            <a class="achieved_title">What we achieved</a>
+                            <p class="achieved_title">What we achieved</p>
                         </div>
                         <div class="col-12" style="text-align:left;">
                             <p class="achieved_content">Easy and fast onboarding experience for clinics, labs, doctors,
@@ -682,7 +682,7 @@
                 <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
                     <div class="row notification1" style="margin-top:25%;">
                         <div class="col-12" style="text-align:left;">
-                            <a class="family_title">Notifications</a>
+                            <p class="family_title">Notifications</p>
                         </div>
                         <div class="col-12" style="text-align:left;">
                             <p class="notification_content">Easy and fast onboarding experience for clinics, labs,
@@ -710,7 +710,7 @@
                 style="background: #2B2756;padding:30px 70px 30px 70px;border-radius:40px;width:100%;margin-left:0px;height: 700px;">
                 <div class="  row about_head3">
                     <div class=" col-12" style="text-align: center;">
-                        <a class="title_QR">QR Code Based Queuing</a>
+                        <p class="title_QR">QR Code Based Queuing</p>
                     </div>
 
                     <div class=" col-12" style="text-align: center;">
@@ -734,7 +734,7 @@
         <div class="container familys" style="margin-top: 130px;">
             <div class="row">
                 <div class="col-12 family" style="text-align: center;margin-top:200px;">
-                    <a class="family_title">Family group</a>
+                    <p class="family_title">Family group</p>
                 </div>
                 <div class="col-12" style="text-align: center;">
                     <p class="family_details">Patients can manage a family group which enables family members to get
@@ -763,7 +763,7 @@
                 style="background: #2B2756;padding:30px 70px 30px 70px;border-radius:40px;width:100%;margin-left:0px;background-image: url('images/locuscare Assessts/result_rightbottom.svg');background-position:100%; background-repeat:no-repeat;background-position-x: right;background-position:100% 100%;">
                 <div class="  row about_head1">
                     <div class=" col-12">
-                        <a class="title">Result</a>
+                        <p class="title">Result</p>
                         <span class="resulttop" style="float:right;position: relative;
                     bottom: 35px;
                 "><img  class="greendot" alt="curved" src="images/Locuscare Assessts/greendot.svg"></span>
