--- a/Locuscare.html
+++ b/Locuscare.html
@@ -663,7 +663,7 @@
                 style="background: #2B2756;padding:30px 70px 30px 70px;border-radius:40px;width:100%;margin-left:0px;height: 650px;">
                 <div class="  row about_head3">
                     <div class=" col-12" style="text-align: center;">
-                        <a class="title_QR">Dashboard</a>
+                        <p class="title_QR">Dashboard</p>
                     </div>
 
                     <div class=" col-12" style="text-align: center;">
