worked on order

--- a/Locuscare.html
+++ b/Locuscare.html
@@ -352,16 +352,16 @@
                     <div class="row" style="position: relative;
                 right: 25px;">
                         <div class="col-3">
-                            <h6 style="font-size:18px;font-weight:600;color:#665CD7"> Week 01</h6>
+                            <p style="font-size:18px;font-weight:600;color:#665CD7"> Week 01</p>
                         </div>
                         <div class="col-3">
-                            <h6 style="font-size:18px;font-weight:600;color:#665CD7"> Week 03</h6>
+                            <p style="font-size:18px;font-weight:600;color:#665CD7"> Week 03</p>
                         </div>
                         <div class="col-3">
-                            <h6 style="font-size:18px;font-weight:600;color:#665CD7">Week 05 </h6>
+                            <p style="font-size:18px;font-weight:600;color:#665CD7">Week 05 </p>
                         </div>
                         <div class="col-3">
-                            <h6 style="font-size:18px;font-weight:600;color:#665CD7">Week 07 </h6>
+                            <p style="font-size:18px;font-weight:600;color:#665CD7">Week 07 </p>
                         </div>
                     </div>
                     <div class="row approach" style="position: relative;
