--- a/Locuscare.html
+++ b/Locuscare.html
@@ -72,9 +72,7 @@
     <!-- HTML5 Shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
  
-     <script src="js/vendor/html5shim.js"></script>
-    <script src="js/vendor/respond.min.js"></script>
-    
+   
 
     <!-- Freshchat -->
     <script src="https://wchat.freshchat.com/js/widget.js"></script>
@@ -1025,25 +1023,25 @@
                         </div>
                         <div class="col-12 col-xs-12 col-ms-12 col-md-4 col-lg-4 col-xl-4 social_icon_link mobile_social_links"
                             style="display: flex;justify-content: flex-start; display: none;">
-                            <a href="https://www.linkedin.com/company/crayond/" target="_blank" alt="crayond_linkedin"
+                            <a href="https://www.linkedin.com/company/crayond/" target="_blank" rel="noopener" alt="crayond_linkedin"
                                 style="text-decoration: none;margin-left: 10px">
                                 <samp class="social_icon">
                                     <i class="fa fa-linkedin " aria-hidden="true"></i>
                                 </samp>
                             </a>
-                            <a href="https://www.facebook.com/CrayonDigital/" target="_blank" alt="crayond_facebook"
+                            <a href="https://www.facebook.com/CrayonDigital/" target="_blank" rel="noopener" alt="crayond_facebook"
                                 style="text-decoration: none;">
                                 <samp class="social_icon">
                                     <i class="fa fa-facebook " aria-hidden="true"></i>
                                 </samp>
                             </a>
-                            <a href="https://www.instagram.com/crayondofficial/" target="_blank" alt="crayond_instagram"
+                            <a href="https://www.instagram.com/crayondofficial/" target="_blank" rel="noopener" alt="crayond_instagram"
                                 style="text-decoration: none;">
                                 <samp class="social_icon">
                                     <i class="fa fa-instagram fa-lightbulb-o" aria-hidden="true"></i>
                                 </samp>
                             </a>
-                            <a href="https://twitter.com/crayondofficial" target="_blank" alt="crayond_twitter"
+                            <a href="https://twitter.com/crayondofficial" target="_blank" rel="noopener" alt="crayond_twitter"
                                 style="text-decoration: none;">
                                 <samp class="social_icon">
                                     <i class="fa fa-twitter " aria-hidden="true"></i>
