--- a/Locuscare.html
+++ b/Locuscare.html
@@ -948,25 +948,25 @@
                 <div class="row footer_social_media1">
                     <div class="col-12 col-xs-12 col-ms-12 col-md-4 col-lg-4 col-xl-4 social_icon_link"
                         style="display: flex;justify-content: flex-start;margin-left: 14px;">
-                        <a href="https://www.linkedin.com/company/crayond/" target="_blank" alt="crayond_linkedin"
+                        <a href="https://www.linkedin.com/company/crayond/" target="_blank"  rel="noopener"alt="crayond_linkedin"
                             style="text-decoration: none;">
                             <samp class="social_icon">
                                 <i class="fa fa-linkedin " aria-hidden="true"></i>
                             </samp>
                         </a>
-                        <a href="https://www.facebook.com/CrayonDigital/" target="_blank" alt="crayond_facebook"
+                        <a href="https://www.facebook.com/CrayonDigital/" target="_blank"  rel="noopener"alt="crayond_facebook"
                             style="text-decoration: none;">
                             <samp class="social_icon">
                                 <i class="fa fa-facebook " aria-hidden="true"></i>
                             </samp>
                         </a>
-                        <a href="https://www.instagram.com/crayondofficial/" target="_blank" alt="crayond_instagram"
+                        <a href="https://www.instagram.com/crayondofficial/" target="_blank" rel="noopener" alt="crayond_instagram"
                             style="text-decoration: none;">
                             <samp class="social_icon">
                                 <i class="fa fa-instagram fa-lightbulb-o" aria-hidden="true"></i>
                             </samp>
                         </a>
-                        <a href="https://twitter.com/crayondofficial" target="_blank" alt="crayond_twitter"
+                        <a href="https://twitter.com/crayondofficial" target="_blank"  rel="noopener"alt="crayond_twitter"
                             style="text-decoration: none;">
                             <samp class="social_icon">
                                 <i class="fa fa-twitter " aria-hidden="true"></i>
