--- a/Locuscare.html
+++ b/Locuscare.html
@@ -108,7 +108,7 @@
                                 <a id="blog" href="https://www.crayond.com/blog"> Blog</a>
                                 <a id="glossary" href="./glossary"> Glossary</a>
                                 <a id="saasmetrics" href="/saas-metrics/index" >Saas Metrics</a>
-                                <a id="saasmetrics" href="./case-studies">Case-Studies</a>
+                                <a id="casestudy" href="./case-studies">Case-Studies</a>
                             </div>
                         </span>
                         <span><a class="fontLatoRegular" href="./contact">Contact</a></span>
