--- a/Locuscare.html
+++ b/Locuscare.html
@@ -105,7 +105,7 @@
                         <span class="span-position"><a class="fontLatoRegular resources" href="/" target="_blank">Resources</a>
                             <div class="dropdown">
                                 
-                                <a id="blog" href="https://www.crayond.com/blog"> Blog</a>
+                                <a id="blogs" href="https://www.crayond.com/blog"> Blog</a>
                                 <a id="glossary" href="./glossary"> Glossary</a>
                                 <a id="saasmetrics" href="/saas-metrics/index" >Saas Metrics</a>
                                 <a id="casestudy" href="./case-studies">Case-Studies</a>
@@ -855,7 +855,7 @@
                        
                         <div class="row">
                             <div class="col-12 menu_types">
-                                <a id="blog" href="https://www.crayond.com/blog">
+                                <a  href="https://www.crayond.com/blog">
                                     <span class="fontGraphikRegular footer_menu_1">
                                         Blog
                                     </span>
