--- a/Locuscare.html
+++ b/Locuscare.html
@@ -486,7 +486,7 @@
                       
                         <div class="row">
                             <div class="col-1"style="">
-                            <span><ul><li style="color:#2BD2EB;font-size:26px;margin-top:-7px" ></li></ul></li></span>
+                            <span> <ul style="padding:0px 23px;margin:0"><li style="color:#2BD2EB;font-size:26px;margin-top:-7px" ></li></ul></span></span>
                             </div>
                             <div class="col-11"style="color:#FFFFFFB3;font-size:18px;padding-left:0px">
                             The MVP was launched after vigorous testing.
@@ -497,7 +497,7 @@
                         <div class="row"style="margin-top:20px">
                             <div class="col-1">
                                 <span>
-                                    <ul><li style="color:#2BD2EB;font-size:26px;margin-top:-7px" ></li></ul></span>
+                                    <ul style="padding:0px 23px;margin:0"><li style="color:#2BD2EB;font-size:26px;margin-top:-7px" ></li></ul></span>
                             </div>
                             <div class="col-11"style="color:#FFFFFFB3;font-size:18px;padding-left:0px">
                                 User behavior was closely analyzed to make product iterations.
@@ -506,7 +506,7 @@
                    
                         <div class="row"style="margin-top:10px">
                             <div class="col-1">
-                                <span><ul><li style="color:#2BD2EB;font-size:26px;margin-top:-7px" ></li></ul></span>
+                                <span> <ul style="padding:0px 23px;margin:0"><li style="color:#2BD2EB;font-size:26px;margin-top:-7px" ></li></ul></span></span>
                             </div>
                             <div class="col-11"style="color:#FFFFFFB3;font-size:18px;padding-left:0px">
                                 Once the product-market fit was achieved, the MVP progressed to the next developmental stage.
