--- a/Locuscare.html
+++ b/Locuscare.html
@@ -60,6 +60,7 @@
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
     <link href="./plugin/aos.css" rel="stylesheet">
+    <link  rel="stylesheet" href="http://YOUR_VIRTUAL_MACHINE:8888/unsafe/100x100/https://web.dev/install-thumbor/hero.jpg">
 
     <!-- css  -->
     <link rel="stylesheet" href="/styles/comman.css">
