--- a/chennai-super-kings.html
+++ b/chennai-super-kings.html
@@ -601,7 +601,7 @@
 
                 <div class="row">
                     <div class="col-12">
-                        <h6 class="title_2"> CSK TV</h6>
+                        <p class="title_2"> CSK TV</p>
                     </div>
 
                     <div class="row img_main">
@@ -626,7 +626,7 @@
 
                 <div class="row shop_head">
                     <div class="col-12">
-                        <h6 class="title_2"> Shop</h6>
+                        <p class="title_2"> Shop</p>
                     </div>
 
 
@@ -655,7 +655,7 @@
 
                 <div class="row">
                     <div class="col-12">
-                        <h6 class="title_2">Team</h6>
+                        <p class="title_2">Team</p>
                     </div>
 
 
@@ -687,7 +687,7 @@
 
                 <div class="row">
                     <div class="col-12">
-                        <h6 class="title_2">Social Media</h6>
+                        <p class="title_2">Social Media</p>
                     </div>
 
 
@@ -813,7 +813,7 @@
 
            <div class="row">
                <div class="col-12">
-                   <h6 class="title_2">Team</h6>
+                   <p class="title_2">Team</p>
                </div>
 
 
