--- a/managedcare.html
+++ b/managedcare.html
@@ -101,7 +101,7 @@
                         <span class="span-position"><span class="fontLatoRegular resources" target="_blank">Resources</span>
                             <div class="dropdown">
 
-                                <a id="blog" href="https://www.crayond.com/blog">Blog</a>
+                                <a id="blogs" href="https://www.crayond.com/blog">Blog</a>
                                 <a id="glossary" href="./glossary">Glossary</a>
                                 <a id="saasmetrics" href="/saas-metrics/index" >Saas Metrics</a>
                                 <a id="saasmetrics" href="./case-studies">Case-Studies</a>
